--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 
       <div class="slider">
           <div class="header">
-        <a href="index1.html" class="">&nbsp;Resume&nbsp;</a>
+        <a href="index.html" class="">&nbsp;Resume&nbsp;</a>
         <a href="index2.html" class="">&nbsp;Portfolio&nbsp;</a>
       </div>
 
