--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="box-outer">
           <div class="box-1">
-              <img width="100%" src="13514.jpg"  >
+              <img width="100%" src="Pic/13514.jpg"  >
                <div class="aboutme">
                    <br><h1>About Me</h1>
                </div>
